--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -1,20 +1,20 @@
 <html>
 
 <head>
-    <link rel='stylesheet' type='text/css' href='main.css'>
     <link rel='stylesheet' type='text/css' href='css/bootstrap.min.css'>
+    <link rel='stylesheet' type='text/css' href='main.css'>
 </head>
 
 <body>
     <div id='main-container'>
         <div class='row'>
-            <div id='container-announcement' class='col mx-auto'>
+            <div id='container-announcement' class='container-block col mx-auto'>
                 <p>Fashion your Reality.</p>
             </div>
         </div>
 
         <div class='row'>
-            <div id='container-wardrobe' class='carousel slide mx-auto' data-ride="carousel">
+            <div id='container-wardrobe' class='container-block carousel slide mx-auto' data-ride="carousel">
                 <div class="carousel-inner">
                 </div>
                 <a class="carousel-control-prev" href="#container-wardrobe" data-slide="prev">
@@ -23,6 +23,12 @@
                 <a class="carousel-control-next" href="#container-wardrobe" data-slide="next">
                     <span class="carousel-control-next-icon"></span>
                 </a>
+            </div>
+        </div>
+
+        <div class='row'>
+            <div class='container-block'>
+
             </div>
         </div>
 
