--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -15,7 +15,7 @@
 
         <div class='row'>
             <div id='container-wardrobe' class='container-block carousel slide mx-auto' data-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner my-5 mx-auto w-75 rounded">
                 </div>
                 <a class="carousel-control-prev" href="#container-wardrobe" data-slide="prev">
                     <span class="carousel-control-prev-icon"></span>
@@ -27,7 +27,7 @@
         </div>
 
         <div class='row'>
-            <div class='container-block'>
+            <div id='container-' class='container-block'>
 
             </div>
         </div>
@@ -160,7 +160,7 @@
 
             for (var j = 0; j < items[i].length; j++) {
                 var wardrobe_item = document.createElement('div');
-                wardrobe_item.setAttribute('class', 'wardrobe-item mx-auto');
+                wardrobe_item.setAttribute('class', 'wardrobe-item mx-auto rounded');
 
                 var wardrobe_item_image = document.createElement('div')
                 wardrobe_item_image.style.background = 'url(' + items[i][j].background_image + ') center center / contain no-repeat';
