--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -48,10 +48,12 @@
                 </ul>
             </nav>
         </div>
-
+    </div>
 </body>
 
 <script src='particles.min.js'></script>
 <script src='jquery.min.js'></script>
 <script src='js/bootstrap.min.js'></script>
 <script src='wardrobe.js'></script>
+
+</html>
