--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -8,21 +8,13 @@
 <body>
     <div id='main-container'>
         <div class='row'>
-            <div id='container-announcement' class='container-block col mx-auto'>
+            <div id='container-announcement' class='container-block col'>
                 <p>Fashion your Reality.</p>
             </div>
         </div>
 
         <div class='row'>
-            <div id='container-wardrobe' class='container-block carousel slide mx-auto' data-ride="carousel">
-                <div class="carousel-inner mx-auto my-5 w-75 rounded">
-                </div>
-                <a class="carousel-control-prev" href="#container-wardrobe" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </a>
-                <a class="carousel-control-next" href="#container-wardrobe" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </a>
+            <div id='container-wardrobe' class='container-block carousel slide col' data-ride="carousel">
             </div>
         </div>
 
