Modified Video from Front End

--- a/resources/html/streamer.html
+++ b/resources/html/streamer.html
@@ -2,11 +2,14 @@
 
 <head>
     <title>Streamer</title>
+    <link rel='stylesheet' type='text/css' href='../video.css'>
 </head>
 
 <body>
-    <video autoplay></video>
+    <div>
+        <video autoplay class="center"></video>
+    </div>
 </body>
 
-<script src='streamer.js'></script>
+<script src='../streamer.js'></script>
 </html>
