--- a/resources/html/streamer.html
+++ b/resources/html/streamer.html
@@ -6,10 +6,11 @@
 </head>
 
 <body>
-    <div>
-        <video autoplay class="center"></video>
+    <div class="center">
+        <video autoplay ></video>
     </div>
 </body>
 
 <script src='../streamer.js'></script>
+
 </html>
