--- a/resources/html/index.html
+++ b/resources/html/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">This Season</a>
+                        <a class="nav-link" href="/products">This Season</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Ended</a>
