--- a/resources/html/login.html
+++ b/resources/html/login.html
@@ -79,60 +79,59 @@
 </head>
 
 <body>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+  <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
     Launch demo modal
-  </button>
+  </button> -->
 
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-    aria-hidden="true">
-    <form method='post'>
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <img class='modal-header-image' width='192px' height='192px' src='login-avatar.png'></img>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <div class='input-group mb-3'>
-                <div class="input-group-prepend">
-                  <span class='input-group-text'>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                      <path
-                        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
-                      <path d="M0 0h24v24H0z" fill="none" /></svg>
-                  </span>
-                </div>
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter email"
-                  name='username'>
+  <!-- <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true"> -->
+  <form method='post'>
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <img class='modal-header-image' width='192px' height='192px' src='login-avatar.png'></img>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <div class='input-group mb-3'>
+              <div class="input-group-prepend">
+                <span class='input-group-text'>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path
+                      d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z" />
+                    <path d="M0 0h24v24H0z" fill="none" /></svg>
+                </span>
               </div>
-            </div>
-            <div class="form-group">
-              <div class='input-group mb-3'>
-                <div class="input-group-prepend">
-                  <span class='input-group-text'>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                      <path d="M0 0h24v24H0z" fill="none" />
-                      <path
-                        d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z" />
-                    </svg>
-                  </span>
-                </div>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
-                  name='password'>
-              </div>
+              <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter email" name='username'>
             </div>
           </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-lucid">Authenticate</button>
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <div class="form-group">
+            <div class='input-group mb-3'>
+              <div class="input-group-prepend">
+                <span class='input-group-text'>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M0 0h24v24H0z" fill="none" />
+                    <path
+                      d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z" />
+                  </svg>
+                </span>
+              </div>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
+                name='password'>
+            </div>
           </div>
         </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-lucid">Authenticate</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        </div>
       </div>
-    </form>
-  </div>
+    </div>
+  </form>
+  <!-- </div> -->
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
